assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:wght@300&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
h1, h2, h3{
    font-family: "Archivo Black", sans-serif;
}
body {
    
    font-weight: bold;
    color: white;
    font-size: 25px;
    background-color: black;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    width: 100vw;
    height: 100vh;



    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 100px 1fr 1fr 50px;

    gap: 10px;

    padding: 10px;
    box-sizing: border-box;
}

.container div {
    padding: 10px;
}

.header {
    grid-column-start: 1;
    grid-column-end: 4;
}

.content_large {
    grid-row-start: 2;
    grid-row-end: span 2;
    grid-column-start: 1;
    grid-column-end: 3;
    background-image: url(../images/alliance-football-club-com.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center;
    
}

.content_small1 {
    background-color: #1F51FF;
}

.content_small {
    background-color: black;

}
p{
    text-align: center;
    text-justify: inter-word;
}



/* Logo and headings */
#logo {
    float: left;
    font-size: 200%;
    margin-left: 10px;
}
h3{
    color: black;
    text-align: center;
    text-decoration: underline;
    letter-spacing: 4px;
}
.content_small > h3{
    color: white;
}
.content_small1 > h3{
    text-transform: uppercase;
}
h2{
    color: black;
    text-align: center;
    text-transform: uppercase;
}

/* navigation */
#menu {
    float: right;


}

#menu,
#logo {
    line-height: 60px;
    color: white;
}

#menu li {
    display: inline-block;
    list-style-type: none;
    margin-right: 20px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    color: crimson;
    border-bottom: 1px solid #ff4545;
}

.active {
    border-bottom: 1px solid #ff4545;
}

/* footer */
.social-media {
    display: flex;
    text-align: center;
    list-style-type: none;
    align-items: center;
    width: 100%;
    justify-content: space-evenly;
}

.social-media>li {
    display: inline;
    justify-content:center;
}

.social-media i {
    font-size: 150%;
    color: white;
}

footer {
    margin-top: auto;
    
}

.footer {
    grid-column-start: 1;
    grid-column-end: 4;
}
/* Gallery page */
.image-grid {
    --gap: 16px;
    --num-cols: 4;
    --row-height: 300px;

    box-sizing: border-box;
    padding: var(--gap);

    display: grid;
    grid-template-columns: repeat(var(--num-cols), 1fr);
    grid-auto-rows: var(--row-height);
    gap: var(--gap);
}

.image-grid>img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
/* Sign up page */
.form_section{
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
}

.form_section_container h2{
    color:#fafafa;
    margin-bottom:20px;
}

.text_input{
    background:transparent;
    color:#fafafa;
    width:100%;
    height:25px;
    margin:5px 0 20px;
    border:1px solid #fafafa;
    border-radius:2px;
}

.text_input:hover{
    border-color:crimson;
}
.join_button{
    margin-top:20px;
    border-radius:2px;
    text-align:center;
    font-size:100%;
    background-color:crimson;
    color:#fafafa;
    display:block;
}

.join_button:hover{
    background-color:#fafafa;
    color:#f16c6b;
}

/* Response page */
.center{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

}
/* media queries */
@media screen and (max-width: 1200px) {
    .image-grid {
        --num-cols: 4;
        --row-height: 400px;

    }

}
@media screen and (max-width: 1050px) {
    .image-grid {
        --num-cols: 3;
        --row-height: 300px;

    }

}
@media screen and (max-width: 650px) {
    .image-grid {
        --num-cols: 2;
        --row-height: 200px;

    }

}
@media screen and (max-width:650px){
    #menu{
        width: 50%;
        margin: auto;
        margin-left: 20px;
        margin-bottom: 30px;
        line-height: 30px;
    }
}
@media screen and (max-width:689px){
    .container{
        width: 100vw;
        height: 100vh;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 100px 1fr 1fr 1fr 50px;
        gap: 0px;
        padding: 10px;
        box-sizing: border-box;
    }
    
    .header{
        grid-column-start: 1;
        grid-column-end: 2;
       
    }
    .content_large{
        grid-column-start: 1;
        grid-column-end: 2;
        grid-row-start: 2;
        grid-row-end: 3;
    }
    .content_small1{
        grid-column-start: 1;
        grid-column-end: 2;
        grid-row-start: 3;
        grid-row-end: span 1;
    }
    .content_small{
        grid-column-start: 1;
        grid-column-end: 2;
        grid-row-start: 4;
        grid-row-end: span 1;
    }

}
   

